[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools==65.5.1 ; python_version < '3.12'",
    "packaging==20.5; python_version < '3.12'",
    "setuptools         ; python_version >= '3.12'",
    "packaging>=23.2; python_version >= '3.12'",
    "wheel==0.37.0",
]

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"